<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/scrollView"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="horizontal"
      tools:context=".DetailActivity">

      <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_margin="@dimen/margin"
        android:contentDescription="@string/movie_poster"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/cinema"/>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <RatingBar
          android:id="@+id/ratingBar"
          style="?android:attr/ratingBarStyleSmall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="@dimen/margin"
          android:numStars="5"/>

        <TextView
          android:id="@+id/releaseLabelTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="16dp"
          android:layout_marginStart="16dp"
          android:layout_marginTop="8dp"
          android:text="@string/release_date"
          style="@style/CustomLabel"/>

        <TextView
          android:id="@+id/releaseDataTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="16dp"
          android:layout_marginStart="16dp"
          android:textAppearance="@style/TextAppearance.AppCompat.Caption"
          android:textSize="18sp"
          tools:text="2/10/2010"/>

      </LinearLayout>
    </LinearLayout>

    <TextView
      android:id="@+id/synopsisLabelTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/margin"
      android:layout_marginStart="@dimen/margin"
      android:layout_marginTop="@dimen/margin"
      android:text="@string/synopsis_label"
      style="@style/CustomLabel"/>

    <!-- https://stackoverflow.com/questions/1748977/making-textview-scrollable-on-android#3256305 -->
    <TextView
      android:id="@+id/synopsisTextView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/margin"
      android:layout_marginEnd="24dp"
      android:layout_marginLeft="24dp"
      android:layout_marginRight="24dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="@dimen/margin"
      android:textSize="18sp"
      />

    <TextView
      android:id="@+id/video_label_textview"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/videos"
      android:visibility="gone"
      android:layout_marginLeft="@dimen/margin"
      android:layout_marginStart="@dimen/margin"
      style="@style/CustomLabel"/>

    <android.support.v7.widget.RecyclerView
      android:id="@+id/video_recycler_view"
      android:layout_width="match_parent"
      android:layout_height="80dp"
      />

    <TextView
      android:id="@+id/review_label_textview"
      style="@style/CustomLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin"
      android:layout_marginStart="@dimen/margin"
      android:text="@string/reviews"
      android:visibility="gone"
      />

    <android.support.v7.widget.RecyclerView
      android:id="@+id/review_recycler_view"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="@dimen/double_margin"
      android:paddingRight="@dimen/double_margin"
      />

  </LinearLayout>


</ScrollView>